--- a/business/team.html
+++ b/business/team.html
@@ -160,10 +160,10 @@
             <div class="aside__sertificates">
                 <div class="aside__sertificates-wrap">
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="/business/img/sert1.png" alt="sertificate">
+                        <img class="aside__sertificate-img" src="/business/img/sert11.png" alt="sertificate">
                     </div>
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="/business/img/sert2.png" alt="sertificate">
+                        <img class="aside__sertificate-img" src="/business/img/sert12.png" alt="sertificate">
                     </div>
                     <div class="aside__sertificate">
                         <img class="aside__sertificate-img" src="/business/img/sert3.png" alt="sertificate">
@@ -177,17 +177,17 @@
         </aside>
         <main class="main bgw">
             <div class="main__picture">
-                <div class="main__zoom"><a href="#">Увеличенный просмотр<img src="/business/img/zoom.png" alt="Zoom"></a></div>
+                <div class="main__zoom"><a class="main__zoom-link main__zoom-link1" href="#">Увеличенный просмотр<img src="/business/img/zoom.png" alt="Zoom"></a></div>
                 <div class="main__picture-wrap">
                     <h3 class="main__picture-title">Наши отделы и схема взаимодействия между ними</h3>
-                    <img class="main__pic" src="/business/img/relations.png" alt="">
+                    <img class="main__pic" src="/business/img/relations.png" alt="main__pic">
                 </div>
             </div>
             <div class="main__picture">
-                <div class="main__zoom"><a href="#">Увеличенный просмотр<img src="/business/img/zoom.png" alt="Zoom"></a></div>
+                <div class="main__zoom"><a class="main__zoom-link main__zoom-link2" href="#">Увеличенный просмотр<img src="/business/img/zoom.png" alt="Zoom"></a></div>
                 <div class="main__picture-wrap">
                     <h3 class="main__picture-title">Наши отделы и схема взаимодействия между ними</h3>
-                    <img class="main__pic" src="/business/img/map.png" alt="">
+                    <img class="main__pic" src="/business/img/map.png" alt="main__pic">
                 </div>
             </div>
             <h3 class="main__picture-title">Команда управления подразделениями</h3>
@@ -195,7 +195,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/1.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Холодов Владимир Иванович</span>
                                 <span class="main__label">Генеральный директор</span>
@@ -206,7 +206,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/2.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Ефимович Ирина Геннадьевна</span>
                                 <span class="main__label">Коммерческий директор</span>
@@ -217,7 +217,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/3.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Ершова наталья александровна</span>
                                 <span class="main__label">Руководитель отдела заключения договоров</span>
@@ -228,7 +228,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/4.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Грант Кира николаевна</span>
                                 <span class="main__label">Руководитель отдела сопровождения</span>
@@ -239,7 +239,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/5.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Иванов александр Владимирович</span>
                                 <span class="main__label">Руководитель Тендерного отдела</span>
@@ -250,7 +250,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/6.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Гусенков сергей александрович</span>
                                 <span class="main__label">Руководитель Юридического отдела</span>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/7.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Дорошенко Татьяна ивановна</span>
                                 <span class="main__label">Главный бухгалтер</span>
@@ -272,7 +272,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/8.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Костецки Инна</span>
                                 <span class="main__label">Ведущий специалист государственных и коммерчиских закупок</span>
@@ -283,7 +283,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/9.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Шконда анастасия владимировна</span>
                                 <span class="main__label">Ведущий специалист государственных закупок</span>
@@ -294,7 +294,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/10.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Болдырев Дмитрий сергеевич</span>
                                 <span class="main__label">Руководитель отдела аналитики</span>
@@ -305,7 +305,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/11.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Парсегов валерий артурович</span>
                                 <span class="main__label">Ведущий специалист управления проектами</span>
@@ -316,7 +316,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="" alt="teammember">
+                            <img src="/business/img/team/12.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Сидоренко Юлия эдуардовна</span>
                                 <span class="main__label">HR-специалист</span>
@@ -326,6 +326,8 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="team-gallery"></div>
             </div>
         </main>
     </div>
@@ -377,6 +379,19 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup divisions">
+        <div class="popup__body">
+            <img src="/business/img/relations.png" alt="">
+        </div>
+    </div>
+
+    <div class="popup map">
+        <div class="popup__body">
+            <img src="/business/img/map.png" alt="">
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="/business/js/main.js"></script>
