--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -634,11 +634,19 @@
             <div class="container">
                 <div class="about__body">
                     <h3 id="about" class="section__title about__title">О нас</h3>
-                    <p class="about__text">Хорошая обувь – это не тот предмет гардероба, который меняют каждый сезон. И первый шаг к тому, чтобы сэкономить и сохранить качество обуви – это именно грамотный и своевременный уход.
-                        <br><br>
-                        Неправильная чистка – хуже, чем ее отсутствие! Ничто не портит обувь так, как самостоятельные попытки избавиться от следов реагентов и прочих сложных загрязнителей.
-                        <br><br>
-                        Мы создали методику полного ухода за обувью, взяв за образец эффективные западные технологии и адаптировав их к российским реалиям. Никто в России, кроме нас, пока не использует подобную методику. Мы гарантируем, что предоставляем лучший на рынке сервис.</p>
+                    <div class="about__text">
+                        <p>
+                            Хорошая обувь – это не тот предмет гардероба, который меняют каждый сезон. И первый шаг к тому, чтобы сэкономить и сохранить качество обуви – это именно грамотный и своевременный уход.
+                        </p>
+
+                        <p>
+                            Неправильная чистка – хуже, чем ее отсутствие! Ничто не портит обувь так, как самостоятельные попытки избавиться от следов реагентов и прочих сложных загрязнителей.
+                        </p>
+                        <p>
+                            Мы создали методику полного ухода за обувью, взяв за образец эффективные западные технологии и адаптировав их к российским реалиям. Никто в России, кроме нас, пока не использует подобную методику. Мы гарантируем, что предоставляем лучший на рынке сервис.
+                        </p>
+                        
+                    </div>
                 </div>
             </div>  
         </div>
