--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -168,8 +168,8 @@
                                     </ul>
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker2.png" alt="Sneaker BG" class="service__bg">
-                                    <div class="service__mobile">
+                                    <!-- <img src="/cleanback/img/sneaker2.png" alt="Sneaker BG" class="service__bg"> -->
+                                    <div class="service__bg">
                                         <img src="/cleanback/img/2.png" alt="sneaker" class="service__sneaker">
                                         <img src="/cleanback/svg/circle.svg" alt="figure" class="service__figure">
                                     </div>
@@ -251,8 +251,8 @@
                                     </ul>
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker1.png" alt="Sneaker BG" class="service__bg">
-                                    <div class="service__mobile">
+                                    <!-- <img src="/cleanback/img/sneaker1.png" alt="Sneaker BG" class="service__bg"> -->
+                                    <div class="service__bg">
                                         <img src="/cleanback/img/1.png" alt="sneaker" class="service__sneaker">
                                         <img src="/cleanback/svg/star.svg" alt="figure" class="service__figure">
                                     </div>
@@ -489,24 +489,32 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide">  
                             <div class="service__wrap">
                                 <div class="service__content">
                                     <h4 class="service__title">Реставрация обуви</h4>
                                     <div class="service__features">
+                                        <ul>
+                                            <li>Сетка</li>
+                                            <li>Замша</li>
+                                            <li>Кожа</li>
+                                        </ul>
                                         <span class="service__feature">Сетка</span>
                                         <span class="service__feature">Замша</span>
                                         <span class="service__feature">Кожа</span>
                                     </div>
-                                    <ul class="service__list">
+                                    <div class="service__ul">
+                                        <ul class="service__list">
                                             <li class="service__item">Покраска обуви и ее отдельных частей</li>
                                             <li class="service__item">Восстановление испортившихся элементов</li>
                                             <li class="service__item">Прочие работы по рестоврации</li>
-                                    </ul>
+                                        </ul>
+                                    </div>
+                                    
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker5.png" alt="Sneaker BG" class="service__bg">
-                                    <div class="service__mobile">
+                                    <!-- <img src="/cleanback/img/sneaker5.png" alt="Sneaker BG" class="service__bg"> -->
+                                    <div class="service__bg">
                                         <img src="/cleanback/img/5.png" alt="sneaker" class="service__sneaker">
                                         <img src="/cleanback/svg/black.svg" alt="figure" class="service__figure">
                                     </div>
