--- a/business/team.html
+++ b/business/team.html
@@ -198,9 +198,9 @@
                             <img src="/business/img/team/1.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Холодов Владимир Иванович</span>
-                                <span class="main__label">Генеральный директор</span>
+                                <span class="main__label">Руководитель Ассоциации</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89034111293" class="main__contact">+7-(903)-411-12-93</a></span>
-                                <span class="main__label">Email: <a href="mailto:kholodov@rutend.ru" class="main__contact">Kholodov@rutend.ru</a></span>
+                                <span class="main__label">Email: <a href="mailto:kholodov@apprf.ru" class="main__contact">Kholodov@apprf.ru</a></span>
                             </div>
                         </div>
                     </div>
@@ -209,9 +209,9 @@
                             <img src="/business/img/team/2.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Ефимович Ирина Геннадьевна</span>
-                                <span class="main__label">Коммерческий директор</span>
+                                <span class="main__label">Заместитель руководителя</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89615097588" class="main__contact">+7-(961)-509-75-88</a></span>
-                                <span class="main__label">Email: <a href="mailto:irina@rutend.ru" class="main__contact">irina@rutend.ru</a></span>
+                                <span class="main__label">Email: <a href="mailto:irina@apprf.ru" class="main__contact">irina@apprf.ru</a></span>
                             </div>
                         </div>
                     </div>
@@ -220,9 +220,9 @@
                             <img src="/business/img/team/3.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Ершова наталья александровна</span>
-                                <span class="main__label">Руководитель отдела заключения договоров</span>
+                                <span class="main__label">Руководитель отдела развития партнерских отношений</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89676573143" class="main__contact">+7-(967)-657-31-43</a></span>
-                                <span class="main__label">Email: <a href="mailto:ershova@rutend.ru" class="main__contact">ershova@rutend.ru</a></span>
+                                <span class="main__label">Email: <a href="mailto:ershova@apprf.ru" class="main__contact">ershova@apprf.ru</a></span>
                             </div>
                         </div>
                     </div>
@@ -231,9 +231,9 @@
                             <img src="/business/img/team/4.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Грант Кира николаевна</span>
-                                <span class="main__label">Руководитель отдела сопровождения</span>
+                                <span class="main__label">Руководитель отдела по работе с партнерами</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89034111293" class="main__contact">+7-(903)-411-22-12</a></span>
-                                <span class="main__label">Email: <a href="mailto:kira@rutend.ru" class="main__contact">kira@rutend.ru</a></span>
+                                <span class="main__label">Email: <a href="mailto:kira@apprf.ru" class="main__contact">kira@apprf.ru</a></span>
                             </div>
                         </div>
                     </div>
@@ -242,9 +242,9 @@
                             <img src="/business/img/team/5.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Иванов александр Владимирович</span>
-                                <span class="main__label">Руководитель Тендерного отдела</span>
+                                <span class="main__label">Руководитель тендерного отдела, организации торгов</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89034112284" class="main__contact">+7-(903)-411-22-84</a></span>
-                                <span class="main__label">Email: <a href="mailto:aleksandr@rutend.ru" class="main__contact">aleksandr@rutend.ru</a></span>
+                                <span class="main__label">Email: <a href="mailto:aleksandr@apprf.ru" class="main__contact">aleksandr@apprf.ru</a></span>
                             </div>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                                 <span class="main__name">Гусенков сергей александрович</span>
                                 <span class="main__label">Руководитель Юридического отдела</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89604731083" class="main__contact">+7-(960)-473-10-83</a></span>
-                                <span class="main__label">Email: <a href="mailto:legal@rutend.ru" class="main__contact">legal@rutend.ru</a></span>
+                                <span class="main__label">Email: <a href="mailto:legal@apprf.ru" class="main__contact">legal@apprf.ru</a></span>
                             </div>
                         </div>
                     </div>
@@ -266,18 +266,7 @@
                                 <span class="main__name">Дорошенко Татьяна ивановна</span>
                                 <span class="main__label">Главный бухгалтер</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89604889477" class="main__contact">+7-(960)-488-94-77</a></span>
-                                <span class="main__label">Email: <a href="mailto:buh@rutend.ru" class="main__contact">buh@rutend.ru</a></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="main__team-wrap">
-                            <img src="/business/img/team/8.jpg" alt="teammember">
-                            <div class="main__contacts">
-                                <span class="main__name">Костецки Инна</span>
-                                <span class="main__label">Ведущий специалист государственных и коммерчиских закупок</span>
-                                <span class="main__label">Моб. тел. <a href="tel:89676573144" class="main__contact">+7-(967)-657-31-44</a></span>
-                                <span class="main__label">Email: <a href="mailto:inna.k@rutend.ru" class="main__contact">inna.k@rutend.ru</a></span>
+                                <span class="main__label">Email: <a href="mailto:buh@apprf.ru" class="main__contact">buh@apprf.ru</a></span>
                             </div>
                         </div>
                     </div>
@@ -286,9 +275,9 @@
                             <img src="/business/img/team/9.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Шконда анастасия владимировна</span>
-                                <span class="main__label">Ведущий специалист государственных закупок</span>
+                                <span class="main__label">Руководитель отдела управления проектами</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89676573145" class="main__contact">+7-(967)-657-31-45</a></span>
-                                <span class="main__label">Email: <a href="mailto:anastasia@rutend.ru" class="main__contact">anastasia@rutend.ru</a></span>
+                                <span class="main__label">Email: <a href="mailto:anastasia@apprf.ru" class="main__contact">anastasia@apprf.ru</a></span>
                             </div>
                         </div>
                     </div>
@@ -297,31 +286,9 @@
                             <img src="/business/img/team/10.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Болдырев Дмитрий сергеевич</span>
-                                <span class="main__label">Руководитель отдела аналитики</span>
+                                <span class="main__label">Руководитель финансово-отдела аналитики</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89034111292" class="main__contact">+7-(903)-411-12-92</a></span>
-                                <span class="main__label">Email: <a href="mailto:boldirev@rutend.ru" class="main__contact">boldirev@rutend.ru</a></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="main__team-wrap">
-                            <img src="/business/img/team/11.jpg" alt="teammember">
-                            <div class="main__contacts">
-                                <span class="main__name">Парсегов валерий артурович</span>
-                                <span class="main__label">Ведущий специалист управления проектами</span>
-                                <span class="main__label">Моб. тел. <a href="tel:89034111249" class="main__contact">+7-(903)-411-12-49</a></span>
-                                <span class="main__label">Email: <a href="mailto:parsegov@rutend.ru" class="main__contact">parsegov@rutend.ru</a></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="main__team-wrap">
-                            <img src="/business/img/team/12.jpg" alt="teammember">
-                            <div class="main__contacts">
-                                <span class="main__name">Сидоренко Юлия эдуардовна</span>
-                                <span class="main__label">HR-специалист</span>
-                                <span class="main__label">Моб. тел. <a href="tel:89615380705" class="main__contact">+7-(961)-538-07-05</a></span>
-                                <span class="main__label">Email: <a href="mailto:julia@rutend.ru" class="main__contact">julia@rutend.ru</a></span>
+                                <span class="main__label">Email: <a href="mailto:boldirev@apprf.ru" class="main__contact">boldirev@apprf.ru</a></span>
                             </div>
                         </div>
                     </div>
