--- a/business/team.html
+++ b/business/team.html
@@ -186,7 +186,7 @@
             <div class="main__picture">
                 <div class="main__zoom"><a class="main__zoom-link main__zoom-link2" href="#">Увеличенный просмотр<img src="/business/img/zoom.png" alt="Zoom"></a></div>
                 <div class="main__picture-wrap">
-                    <h3 class="main__picture-title">Наши отделы и схема взаимодействия между ними</h3>
+                    <h3 class="main__picture-title">География наших клиентов по городам и регионам</h3>
                     <img class="main__pic" src="/business/img/map.png" alt="main__pic">
                 </div>
             </div>
