--- a/test/index.html
+++ b/test/index.html
@@ -156,9 +156,11 @@
         </div>
     </div>
     <footer class="footer">
-        <div class="footer__item unread"><a href="#"><img src="/test/img/twitch.png" alt=""></a></div>
-        <div class="footer__item"><a href="#"><img src="/test/img/cam.png" alt=""></a></div>
-        <div class="footer__item unread"><a href="#"><img src="/test/img/chat.png" alt=""></a></div>
+        <div class="footer__item quote unread"><a href="#"><img src="/test/img/twitch.png" alt=""></a></div>
+        <div class="footer__item video"><a href="#"><img src="/test/img/cam.png" alt=""></a></div>
+        <div class="footer__item chat unread"><a href="#"><img src="/test/img/chat.png" alt=""></a></div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="/test/js/main.js"></script>
 </body>
 </html>
