--- a/business/contacts.html
+++ b/business/contacts.html
@@ -184,10 +184,10 @@
                             <span class="main__data-wrap"><a href="tel:88005501613" class="main__tel main__contact_bold">8 (800) 550-16-13</a></span><span class="main__disc">ГОЛОВНОЙ ОФИС, МНОГОКАНАЛЬНАЯ ЛИНИЯ БЕСПЛАТНО ПО РФ</span>
                         </div>
                         <div class="main__data">
-                            <span class="main__data-wrap"><a href="tel:88619442109" class="main__tel main__contact_bold">8 (861) 944-21-09</a></span><span class="main__disc">ОТДЕЛ ПРОДАЖ И ЗАКЛЮЧЕНИЯ ДОГОВОРОВ</span>
+                            <span class="main__data-wrap"><a href="tel:88619442109" class="main__tel main__contact_bold">8 (861) 944-21-09</a><a href="tel:89615097588" class="main__tel main__contact_bold">8 (961) 509-75-88</a></span><span class="main__disc">ОТДЕЛ ПРОДАЖ И ЗАКЛЮЧЕНИЯ ДОГОВОРОВ</span>
                         </div>
                         <div class="main__data">
-                            <span class="main__data-wrap"><a href="tel:89034476190" class="main__tel main__contact_bold">8 (903) 447-61-90</a></span><span class="main__disc">ТЕНДЕРНЫЙ ОТДЕЛ, ОТДЕЛ СОПРОВОЖДЕНИЕ КЛИЕНТОВ</span>
+                            <span class="main__data-wrap"><a href="tel:89034476190" class="main__tel main__contact_bold">8 (903) 447-61-90</a><a href="tel:88619442212" class="main__tel main__contact_bold">8 (861) 944-22-12</a></span><span class="main__disc">ТЕНДЕРНЫЙ ОТДЕЛ, ОТДЕЛ СОПРОВОЖДЕНИЕ КЛИЕНТОВ</span>
                         </div>
                         <div class="main__data">
                             <span class="main__data-wrap"><a href="tel:88005501613" class="main__tel main__contact_bold">8 (800) 550-16-13</a></span><span class="main__disc"> ДЛЯ ЗАПИСИ ВСТРЕЧ, И НАЗНАЧЕНИЯ ПЕРЕГОВОРОВ БЕСПЛАТНО ПО РФ</span>
@@ -219,7 +219,7 @@
                     <div class="main__contacts-wrap">
                         <div class="main__contact-content">
                             <div class="main__data">
-                                <p class="main__contact-adress main__contact_bold">КРАСНОДАР, УЛ УРАЛЬСКАЯ 75/1, ДЕЛОВОЙ ЦЕНТР AVM, «ORSETTO» <br>ОФИС 301</p>
+                                <p class="main__contact-adress main__contact_bold">КРАСНОДАР, УЛ УРАЛЬСКАЯ 75/1, ДЕЛОВОЙ ЦЕНТР AVM</p>
                             </div>
                             <div class="main__contact-sub ttu">(ДЛЯ ВСТРЕЧ И ПРИЁМА КОРРЕСПОНДЕНЦИИ)</div>
                             <div class="main__contact-sub ttu">ВРЕМЯ РАБОТЫ ОФИСА:</div>
@@ -297,7 +297,7 @@
                             <img src="/business/img/team/6.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Гусенков сергей александрович</span>
-                                <span class="main__label">Руководитель Юридического отдела</span>
+                                <span class="main__label">Руководитель юридического отдела</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89604731083" class="main__contact">+7-(960)-473-10-83</a></span>
                                 <span class="main__label">Email: <a href="mailto:legal@apprf.ru" class="main__contact">legal@apprf.ru</a></span>
                             </div>
@@ -330,7 +330,7 @@
                             <img src="/business/img/team/10.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Болдырев Дмитрий сергеевич</span>
-                                <span class="main__label">Руководитель финансово-отдела аналитики</span>
+                                <span class="main__label">Руководитель отдела аналитики закупок</span>
                                 <span class="main__label">Моб. тел. <a href="tel:89034111292" class="main__contact">+7-(903)-411-12-92</a></span>
                                 <span class="main__label">Email: <a href="mailto:boldirev@apprf.ru" class="main__contact">boldirev@apprf.ru</a></span>
                             </div>
