--- a/solution/index.html
+++ b/solution/index.html
@@ -1159,11 +1159,9 @@
         <!-- Body -->
 
         <div class="footer__body fx fx-between align-center">
-          <span class="copyright">© 2019, Interior Solution</span>
+          <span class="copyright"></span>
           <p class="footer__politics"><a class="privacy" href="#">Политика конфиденциальности</a></p>
           <div class="dev fx align-center">
-            <span class="dev__txt">Разработано:</span>
-            <a href="#"><img src="img/other/dev.png" alt="Логотип"></a>
           </div>
         </div>
         
