--- a/greenway/index.html
+++ b/greenway/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <main class="main">
-        <section class="banner h550">
+        <section class="banner bg h550">
             <img src="img/banner-bg.png" alt="Фон баннера" class="banner__bg">
             <div class="container">
                 <div class="banner__wrap">
@@ -107,9 +107,8 @@
                 </div>
             </div>
         </section>
-        <section class="banner">
+        <section class="banner bg">
             <img src="img/banner2-bg.png" alt="Фон баннера" class="banner__bg banner__bg-beach">
-            <img src="img/chevrons.png" alt="Фон баннера" class="banner__chevrons">
             <div class="container">
                 <div class="banner__wrap banner__padding">
                     <div class="banner__header">
@@ -172,9 +171,8 @@
                 </div>
             </div>
         </section>
-        <section class="banner">
+        <section class="banner bg">
             <img src="img/pazzle.png" alt="Фон баннера" class="banner__bg banner__bg-pazzle">
-            <img src="img/chevrons.png" alt="Фон баннера" class="banner__chevrons">
             <div class="container">
                 <div class="banner__wrap banner__padding">
                     <div class="banner__header">
@@ -208,22 +206,22 @@
                     </div>
                     <div class="section__grid">
                         <div class="section__story">
-
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/J09oHS0X3UY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="section__story">
-
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/__2R9_UL5bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="section__story">
-
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/6cYCJL2OKpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="section__story">
-
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZNLqF98jCkM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="section__story">
-
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ubExtaVWBxo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="section__story">
-
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/BGnQ-_QRmTQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
